# coop

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_IDIOMS.md  Dockerfile  IO.md  Makefile  README.md  TODO.md  client.cpp  coordinator.cpp  coordinator.h  docker-bench.sh  docker-build.sh  docker-profile.sh  docker-test.sh  embedded_list.h  epoll.h  execution_context.cpp  execution_context.h  execution_handle.cpp  execution_handle.h  fixed_list.h  iomgr.cpp  iomgr.h  iomgr.hpp  launchable.h  main.cpp  manager_thread.cpp  manager_thread.h  scheduler_state.h  server.cpp  spawn_configuration.cpp  spawn_configuration.h  tcp_server.h
.github/workflows/: ci.yml
benchmarks/: CLAUDE.md  bench_buffer_ring_throughput.cpp  bench_channel.cpp  bench_client.cpp  bench_continuation.cpp  bench_coordinator.cpp  bench_embedded_list.cpp  bench_fanout.cpp  bench_fanout_pool.cpp  bench_grid.cpp  bench_http.cpp  bench_io.cpp  bench_io_baseline.cpp  bench_perf.cpp  bench_pthread.cpp  bench_scheduler.cpp  bench_server.cpp  bench_ssl.cpp  bench_timer_fanout.cpp  bench_uring_config.cpp  bench_work_yield.cpp  bench_yield_latency.cpp  capture.sh  compare.sh  diag_ktls.cpp  grid_selfwake_bench.cpp
coop/: CLAUDE.md  alloc.h  channel.h  context.cpp  context.h  context_var.h  continuation.h  continuation_pool.cpp  continuation_pool.h  cooperate.h  cooperator.cpp  cooperator.h  cooperator.hpp  cooperator_configuration.h  cooperator_var.h  cooperator_var.hpp  coordinate.h  coordinate_with.h  coordination_result.h  coordinator.cpp  coordinator.h  coordinator.hpp  coordinator_extension.cpp  coordinator_extension.h  debug_borrow.h  embedded_list.h  fixed_list.h  handle.cpp  handle.h  launchable.h  multi_coordinator.h  ref.h  scheduler_state.h  select.h  self.cpp  self.h  shutdown.cpp  shutdown.h  signal.cpp  signal.h  (+13 more)
coop/chan/: DESIGN.md  chan.cpp  channel.h  filter.h  guarded_passage.h  merge.h  passage.h  pipe.h  select.h  subscribe.h  ticker.h
coop/detail/: bump.h  context_switch.S  context_switch.cpp  context_switch.h  coordinator_extension.h  embedded_list.h  memory_order.h  multi_coordinator.h  timer_tag.h
coop/epoch/: CLAUDE.md  epoch.cpp  epoch.h
coop/http/: CLAUDE.md  client.cpp  client.h  connection.cpp  connection.h  response_constants.cpp  response_constants.h  server.cpp  server.h  status.cpp  status.h  tls_transport.h  transport.h  types.h
coop/http/static/: index.html
coop/io/: CLAUDE.md  accept.cpp  accept.h  armed_handle.cpp  armed_handle.h  buffer_ring.h  close.cpp  close.h  connect.cpp  connect.h  descriptor.cpp  descriptor.h  fsync.cpp  fsync.h  handle.cpp  handle.h  io.h  mkdir.cpp  mkdir.h  open.cpp  open.h  poll.cpp  poll.h  read.cpp  read.h  read_file.cpp  read_file.h  recv.cpp  recv.h  request.h  resolve.cpp  resolve.h  send.cpp  send.h  sendfile.cpp  sendfile.h  shutdown.cpp  shutdown.h  shutdown_on_kill.cpp  shutdown_on_kill.h  (+15 more)
coop/io/detail/: handle_extension.h  op_macros.h
coop/io/ssl/: CLAUDE.md  connection.cpp  connection.h  context.cpp  context.h  recv.cpp  recv.h  send.cpp  send.h  sendfile.cpp  sendfile.h  ssl.h  stream.cpp  stream.h
coop/network/: dial.cpp  dial.h  epoll_router.cpp  epoll_router.h  event_mask.h  handle.cpp  handle.h  poll_router.cpp  poll_router.h  router.cpp  router.h  socket.cpp  socket.h  tcp_handler.cpp  tcp_handler.h  tcp_server.cpp  tcp_server.h
coop/perf/: CLAUDE.md  counters.h  patch.cpp  patch.h  probe.h  sampler.cpp  sampler.h
coop/time/: driver.cpp  driver.h  handle.cpp  handle.h  interval.h  now.h  sleep.cpp  sleep.h  ticker.cpp  ticker.h  timeout_coordinator.cpp  timeout_coordinator.h  timer_queue.cpp  timer_queue.h
coop/work/: erg.h  grid.cpp  grid.h
coop/work/detail/: deque.h  shards.h
coop/ws/: connection.cpp  connection.h  sha1.h  types.h  upgrade.cpp  upgrade.h
docs/: INDEX.md  blocking_io_shutdown_01.md  buffer_ring_multishot_01.md  buffer_ring_multishot_02.md  context_switch_core_01.md  continuations_01.md  cross_thread_substrate_01.md  fast_context_switch_01.md  timer_slack_01.md  timer_wheel_001.md
examples/: chat_server.cpp  echo_client.cpp  echo_server.cpp  pipeline.cpp  tcp_proxy.cpp
tests/: CLAUDE.md  test_alloc.cpp  test_armed_handle.cpp  test_channel.cpp  test_continuation.cpp  test_coop_var.cpp  test_cooperate.cpp  test_coordinator.cpp  test_direct_yield.cpp  test_epoch.cpp  test_grid.cpp  test_helpers.h  test_http.cpp  test_io.cpp  test_perf.cpp  test_shutdown.cpp  test_signal.cpp  test_spawn.cpp  test_stress.cpp  test_timer.cpp  test_topology.cpp  test_work_deque.cpp  test_work_pool.cpp  test_ws.cpp
